ver. real-time MTG

--- a/bibtex/master_reference.bib
+++ b/bibtex/master_reference.bib
@@ -417,6 +417,15 @@ title={{STGM}: Spatio-temporal {GPU} management for real-time tasks},
   organization={Schloss Dagstuhl}
 }
 
+@inproceedings{brandenburg2016global,
+  title={Global scheduling not required: Simple, near-optimal multiprocessor real-time scheduling with semi-partitioned reservations},
+  author={Brandenburg, Bj{\"o}rn B and G{\"u}l, Mahircan},
+  booktitle={2016 IEEE Real-Time Systems Symposium (RTSS)},
+  pages={99--110},
+  year={2016},
+  organization={IEEE}
+}
+
 @inproceedings{wong2008fairness,
   title={Fairness and interactive performance of {O(1)} and {CFS} {Linux} kernel schedulers},
   author={Wong, CS and Tan, IKT and Kumari, RD and Lam, JW and Fun, W},
