--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/conclusion.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/conclusion.tex
@@ -6,7 +6,7 @@
 \begin{frame}{結論}
     \begin{itemize}
         \item ROS 2のための最初の自動レイテンシマネージャであるROS-Llama を提案した
-        \item その設計は、ROSエコシステムの要件と制約の慎重な分析によって形作られている
+        \item その設計は, ROSエコシステムの要件と制約の慎重な分析によって形作られている
         \item 我々の評価では, ROS-Llamaは実用的で有益であり, デフォルトのCFSベースラインやSCHED\_RRベースラインのいずれよりも負荷の高い状態でより良いレイテンシ制御を達成することが示された
     \end{itemize}
 \end{frame}
