--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/design_of_ros_llama.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/design_of_ros_llama.tex
@@ -3,32 +3,11 @@
 \section{DESIGN OF ROS-Llama}
 \label{sec: design of ros-llama}
 
-\begin{frame}{ROS-Llama概要}
-    \begin{itemize}
-        \item ROS-Llamaは, これまで述べてきたような観察考察に基づき, 純粋に宣言的な設定アプローチによって, ほぼ自動的に動作する
-        \item ROS-Llamaに必要な設定は以下2つのみ
-              \begin{itemize}
-                  \item レイテンシ管理が必要な cause-effectチェーンのレイテンシ目標
-                  \item 過負荷時に参照されるcause-effectチェーンのデグレード順位
-              \end{itemize}
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{レイテンシ目標設定の例}
-    \begin{itemize}
-        \item 例えば, ユーザは, レーザースキャナーコールバックに新しい測定値が到着してから, 検出された障害物をマップに登録するコールバックが完了するまで, 最大で $200 \mathrm{~ms}$ 経過すると指定できる
-        \item この際以下はROS-Llamaが自動で設定する
-              \begin{itemize}
-                  \item コールバックがどのように接続されるか
-                  \item 各コールバックがどの程度のプロセッサ時間を必要とするか
-                  \item 関係するスレッドをどのようにスケジュールするか
-              \end{itemize}
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{デグレードポリシー}
-    ROS-Llamaではデグレードポリシーの設定が可能
-    \begin{block}{デグレードポリシー}
+\begin{frame}{ROS-Llamaでユーザが設定する項目}
+    \begin{block}{レイテンシ管理が必要なチェーンのレイテンシ目標}
+        例えば, ユーザは, レーザースキャナーコールバックに新しい測定値が到着してから, 検出された障害物をマップに登録するコールバックが完了するまで, 最大で $200 \mathrm{~ms}$ 経過すると設定できる
+    \end{block}
+    \begin{block}{過負荷時に参照されるチェーンのデグレード順位}
         \setlength{\linewidth}{0.98\columnwidth}
         \begin{itemize}
             \item 全てのレイテンシ目標を同時に保証できないと判断した場合, いくつかのチェーンをベストエフォートモードにデグレードする
@@ -37,17 +16,17 @@
     \end{block}
 \end{frame}
 
-\begin{frame}{ROS-Llamaが解決すべき問題}
+\begin{frame}{ROS-Llamaが自動解決する問題}
     \begin{enumerate}
         \item[(1)] 実行中のROSシステムのモデル (全てのトピック, コールバック, エグゼキュータ, それらのリソース要求など) を抽出
         \item[(2)] 設定されたレイテンシ目標を可能な限り満たすように全てのスレッドをプロビジョニングし, いずれかのチェーンをベストエフォートモードに落とす必要があるかを決定
-        \item[(3)] 全てのスレッドを (2) でプロビジョニングした方法に従ってスケジュールする
+        \item[(3)] 全てのスレッドを (2) でプロビジョニングした方法に従ってスケジュール
     \end{enumerate}
 \end{frame}
 
 \begin{frame}{ROS-Llama全体象}
     \fitimage{
-        ROS-Llamaは (1) に対応するモデル抽出器と (2) に対応するバジェット管理器からなり,  (3) にはLinuxのスケジューラSCHED\_DEADLINEを使用
+        ROS-Llamaは (1) に対応するモデル抽出器と (2) に対応するバジェットマネージャからなり,  (3) にはLinuxのスケジューラSCHED\_DEADLINEを使用
     }{overview}
 \end{frame}
 
@@ -65,14 +44,20 @@
 \label{ssec: the model extractor}
 
 \begin{frame}{モデル抽出器の役割}
-    \begin{itemize}
-        \item モデル抽出器は, システム内の全ての関連スレッドを識別し, コールバックグラフ構造を構築し, 到着時間と実行時間を測定する必要がある
-        \item この目的のために, ROSLlamaモデル抽出器は, ROSコアライブラリ $\mathrm{rclcpp}$ および $\mathrm{rcl}$ を解析する
-        \item これらのライブラリは, 全ての (C++ベースの) ROSノードで使用されているため, サードパーティのROSコンポーネントに変更を加えることなく解析可能
-    \end{itemize}
+    \begin{block}{目的}
+        システム内の全ての関連スレッドを識別し, コールバックグラフ構造を構築し, 到着時間と実行時間を測定する
+    \end{block}
+    \begin{block}{方法}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item モデル抽出器は, ROSコアライブラリ $\mathrm{rclcpp}$ および $\mathrm{rcl}$ を解析する
+            \item これらのライブラリは, 全ての (C++ベースの) ROSノードで使用されているため, サードパーティのROSコンポーネントに変更を加えることなく解析可能
+        \end{itemize}
+    \end{block}
 \end{frame}
 
 \begin{frame}{解析に使用するトレースポイント}
+    \vspace{1mm}
     \begin{block}{コールバックに関するトレースポイント}
         \setlength{\linewidth}{0.98\columnwidth}
         \begin{itemize}
@@ -86,58 +71,66 @@
         \setlength{\linewidth}{0.98\columnwidth}
         \begin{itemize}
             \item スレッドがコールバック処理ループを開始してエグゼキュータになる時
-            \item 「サービス」など特定のAPIの使用を監視する
+            \item サービスなど特定のAPIの使用を監視する
         \end{itemize}
     \end{block}
 \end{frame}
 
-\begin{frame}{コールバックグラフ構築方法1}
+\begin{frame}{コールバックグラフ構築方法}
+    モデル抽出器はコールバックがpublishされるたびに, コールバックとトピックの間にエッジを追加する (トピックがまだ存在しない場合)
+    \begin{block}{静的プロパティ}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \footnotesize
+            \item 新しいコールバックが登録されると, 対応するトレースイベントは, タイプ・関連するトピック・識別子を報告する
+            \item これらはコールバックのライフタイム中に変更されない
+        \end{itemize}
+    \end{block}
+    \begin{block}{動的プロパティ}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \footnotesize
+            \item 動的プロパティは, コールバックの実行開始, 完了, またはpublish時に対応するトレースイベントから派生し, 継続的に更新される
+            \item 各トレースイベントは, 識別子, publish の場合はpublish先のトピックを含む
+        \end{itemize}
+    \end{block}
+\end{frame}
+
+\begin{frame}{到着/実行時間曲線の更新}
+    モデル抽出器は以下のタイミングで到着/実行時間曲線を更新する
     \begin{itemize}
-        \item モデル抽出器は, トレースイベントに基づいて, コールバックアクティベーショングラフを構築する
-        \item 各トレースイベントは, そのタイプ, 発信元スレッド, 一対のタイムスタンプ, およびイベント固有の追加データから構成される
-        \item 2 つのタイムスタンプは, ウォールタイマの時間を示すシステム全体のモノトニッククロックと, スレッドが受け取ったプロセッササービスの量を追跡するスレッドごとの $C P U$ タイムクロックという異なるクロックに従って時間を測定する
-        \item 抽出器は, モノトニックタイムスタンプを使用して到着時刻を推測し, CPU時間クロックを使用して実行時間を測定する
+        \item コールバックが完了するたびに, コールバックの実行時間曲線を更新する
+        \item publishイベントと開始イベントの発生に基づいて到着曲線を更新される
     \end{itemize}
 \end{frame}
 
-\begin{frame}{コールバックグラフ構築方法2}
-    \begin{itemize}
-        \item 新しいコールバックが登録されると, 対応するトレースイベントは, コールバックのタイプおよび関連するトピックを報告する
-        \item イベントレコードはさらに, コールバックオブジェクトの仮想アドレスから派生した識別子を含み, これはコールバックを一意に識別するために使用される
-        \item これら3つのプロパティ (タイプ, トピック, および識別子) は, 登録時に決定され, コールバックのライフタイム中に変更されることはない
-    \end{itemize}
-\end{frame}
+% \begin{frame}{コールバックグラフ構築方法1}
+%     \begin{itemize}
+%         \item モデル抽出器は, トレースイベントに基づいて, コールバックアクティベーショングラフを構築する
+%         \item 各トレースイベントは, そのタイプ, 発信元スレッド, タイムスタンプ, およびイベント固有の追加データから構成される
+%         \item 2 つのタイムスタンプは, ウォールタイマの時間を示すシステム全体のモノトニッククロックと, スレッドが受け取ったプロセッササービスの量を追跡するスレッドごとの $C P U$ タイムクロックという異なるクロックに従って時間を測定する
+%         \item 抽出器は, モノトニックタイムスタンプを使用して到着時刻を推測し, CPU時間クロックを使用して実行時間を測定する
+%     \end{itemize}
+% \end{frame}
 
-\begin{frame}{コールバックグラフ構築方法3}
-    \begin{itemize}
-        \item 追加の動的プロパティは, コールバックの実行開始, 完了, またはpublish時にpublishされるイベントから派生し, 継続的に更新される
-        \item このようなトレースイベントはそれぞれ, 一意のコールバック識別子と, publish イベントの場合はpublish先のトピックを含む
-        \item コールバックがpublishされるたびに, 抽出器はコールバックと報告されたトピックの間にエッジを追加する (トピックがまだ存在しない場合)
-        \item コールバックが完了するたびに, 抽出器はコールバックの実行時間曲線を更新する
-        \item 同様に, 到着曲線は, 公開イベントと開始イベントの発生に基づいて更新される
-    \end{itemize}
-\end{frame}
+% \begin{frame}{イベントソースの管理}
+%     \begin{itemize}
+%         \item モデル抽出器は全てのイベントソース, すなわち, ROSシステムと相互作用するがエグゼキュータ自身ではないスレッドも管理する
+%         \item このようなスレッドは, コールバックを開始することなくpublishされるため, 容易に識別できる
+%         \item ROS-Llamaは, データ取得から始まるチェーンのレイテンシを制御するために, このようなスレッドを管理する
+%     \end{itemize}
+% \end{frame}
 
-\begin{frame}{イベントソースの対応方法}
-    \begin{itemize}
-        \item エグゼキュータの観察に加えて, モデル抽出器は全てのイベントソース, すなわち, ROSシステムと相互作用するがエグゼキュータ自身ではないスレッドを識別する必要がある
-        \item このようなスレッドは, コールバックを開始することなくpublishされるため, 容易に認識できる
-        \item ROS-Llamaは, データ取得から始まるcause-effectチェーンのレイテンシを制御するために, このようなスレッドを管理する必要がある
-    \end{itemize}
-\end{frame}
+% \begin{frame}{サービスの対応方法}
+%     \begin{itemize}
+%         \item コールバックに加え, ROS APIはコールリターンセマンティクスを実現するサービスの概念も提供していることは言及に値する：コールバックは一見ブロックする方法でサービスを呼び出し, 応答で応答を受け取ることができる
+%         \item しかし, その裏側では, サービスは継続パッシングアプローチを用いたレギュラーコールバックとして実装されている (クライアントは特別なリクエストトピックにメッセージを投稿することでサービスを呼び出し, どのトピックで応答を受け取りたいかを指定する)
+%         \item したがって, モデル抽出器は, サービスを検出し, 追跡し, ROS-Llamaの残りの部分に対して透過的な方法でそれらを表現できる
+%     \end{itemize}
+% \end{frame}
 
-\begin{frame}{サービスの対応方法}
-    \begin{itemize}
-        \item コールバックに加え, ROS APIはコールリターンセマンティクスを実現するサービスの概念も提供していることは言及に値する：コールバックは一見ブロックする方法でサービスを呼び出し, 応答で応答を受け取ることができる
-        \item しかし, その裏側では, サービスは継続パッシングアプローチを用いたレギュラーコールバックとして実装されている (クライアントは特別なリクエストトピックにメッセージを投稿することでサービスを呼び出し, どのトピックで応答を受け取りたいかを指定する)
-        \item したがって, モデル抽出器は, サービスを検出し, 追跡し, ROS-Llamaの残りの部分に対して透過的な方法でそれらを表現できる
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item 推論された最新のコールバックグラフとタイミングモデルは, 定期的にバジェットマネージャに提供され, バジェットマネージャはそれを使って最新のプロビジョニングを決定する
-    \end{itemize}
+\begin{frame}{モデルの提供}
+    推論された最新のコールバックグラフとタイミングモデルは, 定期的にバジェットマネージャに提供され, バジェットマネージャはそれを使って最新のプロビジョニングを決定する
 \end{frame}
 
 
@@ -146,35 +139,41 @@
 
 \begin{frame}{セクションサマリ}
     \begin{itembox}[l]{\textbf{目的}}
-        プロビジョニングされたスレッドがROS-Llamaによって実際にどのようにスケジューリングされるかを説明する
+        プロビジョニングされたスレッドがROS-Llamaによってどのようにスケジューリングされるかを説明する
     \end{itembox}
 \end{frame}
 
 \begin{frame}{使用するスケジューラ}
-    ROS-Llamaは以下の2つの理由でSCHED\_DEADLINEスケジューラを使用する
-    \begin{itemize}
-        \item ROS処理チェーンに対するCasiniらの応答時間分析[6]が, リソース予約でスケジュールされたエグゼキュータスレッドに直接適用できる
-        \item CBSの機能により, プロセッサ要求が予想外に急増したスレッドが, 他のスレッドのバジェット受け取りを妨げない
-    \end{itemize}
+    ROS-LlamaはSCHED\_DEADLINEスケジューラを使用する
+    \begin{block}{設計理由}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item ROS処理チェーンに対するCasiniらの応答時間分析~\cite{casini2019response}が, リソース予約でスケジュールされたエグゼキュータスレッドに直接適用できる
+            \item CBSの機能により, プロセッサ要求が予想外に急増したスレッドが, 他のスレッドのバジェット受け取りを妨げない
+        \end{itemize}
+    \end{block}
 \end{frame}
 
 \begin{frame}{使用するスケジューリング手法}
-    ROS-Llamaは以下の2つ理由でパーティションドスケジューリングを使用する
-    \begin{itemize}
-        \item パーティションドスケジューリングは, 経験的にほとんどのワークロードでより高いスケジューラビリティを達成することが示されている [11]
-        \item ROS-Llamaは, 適切なマッピングを自動的に決定するのに十分な情報を持っているので, システムインテグレータに追加の負担がない
-    \end{itemize}
+    ROS-Llamaはパーティションドスケジューリングを使用する
+    \begin{block}{設計理由}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item パーティションドスケジューリングは, 経験的にほとんどのワークロードでより高いスケジューラビリティを達成することが示されている~\cite{brandenburg2016global}
+            \item ROS-Llamaは, 適切なマッピングを自動的に決定するのに十分な情報を持っているので, システムインテグレータに追加の負担がない
+        \end{itemize}
+    \end{block}
 \end{frame}
 
-\begin{frame}{スレッドの分割例}
-    \begin{itemize}
-        \item ROS-Llamaは自分自身と, 様々なカーネルやDDSミドルウェアのスレッドのような雑多なシステムインフラを, 予約したシステムコアに分離することも可能
-        \item 残りのコアは, ROSスレッドのプロビジョニングのためにバジェットマネージャが使用できる
-    \end{itemize}
-\end{frame}
+% \begin{frame}{スレッドの分割例}
+%     \begin{itemize}
+%         \item ROS-Llamaは自分自身と, 様々なカーネルやDDSミドルウェアのスレッドのような雑多なシステムインフラを, 予約したシステムコアに分離することも可能
+%         \item 残りのコアは, ROSスレッドのプロビジョニングのためにバジェットマネージャが使用できる
+%     \end{itemize}
+% \end{frame}
 
 \begin{frame}{ベストエフォートモードのチェーン処理方法}
-    ベストエフォートモードでチェーンを処理するエグゼキュータは, ROS-Llamaによってプロビジョニングされず, CFSによってスケジューリングする
+    ベストエフォートモードでチェーンを処理するエグゼキュータは, ROS-Llamaによってプロビジョニングせず, デフォルトのCFSによってスケジューリングする
 \end{frame}
 
 
@@ -183,7 +182,7 @@
 
 \begin{frame}{セクションサマリ}
     \begin{itembox}[l]{\textbf{目的}}
-        抽出されたモデルに基づいて, バジェットマネージャはスケジューラ構成 (各予約のバジェットと期間, および予約とコアの実現可能なマッピング) を見つけ, 構成されたチェーンをデッドライン内に完了させる
+        抽出されたモデルに基づいて, バジェットマネージャは各予約のバジェットと周期, および予約とコアの実現可能なマッピングを見つけ, 構成されたチェーンを時間内に完了させる
     \end{itembox}
 \end{frame}
 
@@ -196,9 +195,9 @@
 \end{frame}
 
 \begin{frame}{予約のバジェットの決定方法}
-    ROS-Llamaは, 各cause-effectチェーンに対して反復的なヒューリスティック駆動探索により予約のバジェットを決定する
+    ROS-Llamaは, 各チェーンに対して反復的なヒューリスティック駆動探索により予約のバジェットを決定する
     \begin{block}{設計理由}
-        コールバックグラフの相互接続性やバジェットの相互依存性がある, 複雑な最適化問題を解くことは, 実行時にコストがかかり過ぎる
+        コールバックグラフの相互接続性やバジェットの相互依存性がある複雑な最適化問題を解くことは, 実行時にコストがかかり過ぎる
     \end{block}
 \end{frame}
 
@@ -208,7 +207,7 @@
 
 \begin{frame}{初期バジェット割り当てアルゴリズム全体像}
     \fitimage{
-        各エグゼキュータの長期的な最大プロセッサ要求を反映する初期バジェット割り当てを見つける
+        各エグゼキュータの長期的な最大プロセッサ要求を満たす初期バジェット割り当てを見つける
     }{alg1}
 \end{frame}
 
@@ -225,7 +224,7 @@
 
 \begin{frame}{初期バジェット設定後}
     \begin{itemize}
-        \item 初期バジェットを割り当てたので, 他のエグゼキュータが $100 \%$ の帯域幅を持つという仮定を取り 除く
+        \item 初期バジェットを割り当てたので, 他のエグゼキュータが $100 \%$ の帯域幅を持つという仮定を取り除く
         \item その結果, 一部のコールバックは, ジッター効果の増加により, スケジューリング不能になる可能性がある
         \item アルゴリズム4行目からはこれに対処する
     \end{itemize}
@@ -233,14 +232,21 @@
 
 \begin{frame}{エグゼキュータの帯域幅の調整}
     \fitimage{
-        horizonでの長期的な需要が満たされるか, エグゼキュータの帯域幅 $100 \%$ を超えるまで, 対応エグゼキュータの帯域幅を繰り返し増加させる
+        horizonにおけるプロセッサ要求が満たされるか, エグゼキュータの帯域幅が $100 \%$ を超えるまで, 対応エグゼキュータの帯域幅を繰り返し増加させる
     }{alg2_sup2}
 \end{frame}
 
 \begin{frame}{予約のプロセッサへの割り当て}
     \fitimage{
         \begin{itemize}
-            \item ROS-Llamaはワーストフィット, ファーストフィットの順で予約の割り当てを試行する
+            \item ワーストフィット, ファーストフィットの順で予約の割り当てを試行する
+                  \begin{block}{ワーストフィット}
+                      最も利用率が低いプロセッサに割り当てる
+                  \end{block}
+                  \begin{block}{ファーストフィット}
+                      利用率が1を超えない最初に見つかったプロセッサに割り当てる
+                  \end{block}
+                  \vspace{5mm}
             \item それでも割り当てられるプロセッサが無い場合, チェーンをデグレードする
         \end{itemize}
     }{alg1_3}
@@ -250,9 +256,9 @@
 \subsubsection{Refining the Budget}
 \label{sssec: refining the budget}
 
-\begin{frame}{バジェットのさらなる追加}
+\begin{frame}{バジェットの精緻化}
     \fitimage{
-        処理チェーンの最悪応答時間がチェーンの設定されたレイテンシ目標を満たすまで, エグゼキュータのバジェットを追加する
+        処理チェーンの最悪応答時間がチェーンのレイテンシ目標を満たすまで, エグゼキュータのバジェットを追加する
     }{alg2}
 \end{frame}
 
