--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/main.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/main.tex
@@ -38,11 +38,11 @@
 \input{background_and_definitions.tex}
 % \input{automatic_latency_management.tex}
 \input{design_of_ros_llama.tex}
-\input{practical_considerations.tex}
+% \input{practical_considerations.tex}
 \input{evaluation.tex}
-\forme{\input{open_problems_and_pragmatic_workarounds.tex}}
-\input{related_work.tex}
-\input{conclusion.tex}
+% \forme{\input{open_problems_and_pragmatic_workarounds.tex}}
+% \input{related_work.tex}
+% \input{conclusion.tex}
 
 \lastpage
 
