--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/background_and_definitions.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/background_and_definitions.tex
@@ -3,94 +3,106 @@
 \section{BACKGROUND AND DEFINITIONS}
 \label{sec: background and definitions}
 
-\begin{frame}{セクションサマリ}
-    \begin{itembox}[l]{\textbf{目的}}
-        ROS-Llamaの基礎となる必要な背景知識と主な解析コンセプトを簡単にまとめる
-    \end{itembox}
-\end{frame}
+% \begin{frame}{セクションサマリ}
+%     \begin{itembox}[l]{\textbf{目的}}
+%         ROS-Llamaの基礎となる必要な背景知識と主な解析コンセプトを簡単にまとめる
+%     \end{itembox}
+% \end{frame}
 
-\begin{frame}{ROS}
-    \begin{itemize}
-        \item ROSフレームワークは, ロボットアプリケーションのための一般的なオープンソースのミドルウェアとコンポーネントリポジトリである[1]
-        \item 本論文は, 特に, 第一世代のROSフレームワークの最近の主要なリファクタリングであるROS 2 [2]に関連する
-        \item 簡潔さを保つため, 本論文ではバージョン番号を省略する
-    \end{itemize}
-\end{frame}
+% \begin{frame}{ROS}
+%     \begin{itemize}
+%         \item ROSフレームワークは, ロボットアプリケーションのための一般的なオープンソースのミドルウェアとコンポーネントリポジトリである[1]
+%         \item 本論文は, 特に, 第一世代のROSフレームワークの最近の主要なリファクタリングであるROS 2 [2]に関連する
+%         \item 簡潔さを保つため, 本論文ではバージョン番号を省略する
+%     \end{itemize}
+% \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item ROSは, 通常Linux上に展開される成熟した機能豊富なミドルウェアである
-        \item 我々は, レイテンシ管理に不可欠なランタイムの主要要素であるトピック, コールバック, エグゼキュータに着目している
-        \item すでに述べたように, ROSはpublish/subscribeインフラを中心に構築されており, デプロイの選択にはほとんど無頓着である
-        \item したがって, ROSアプリケーションは, 複数のホスト, コア, プロセス, およびスレッドにまたがることができる
-        \item 自動レイテンシ管理の目的では, Linuxを実行している共有メモリマルチコアシステムが自然な範囲であり, 我々はここに注意を制限する
-    \end{itemize}
-\end{frame}
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item ROSは, 通常Linux上に展開される成熟した機能豊富なミドルウェアである
+%         \item 我々は, レイテンシ管理に不可欠なランタイムの主要要素であるトピック, コールバック, エグゼキュータに着目している
+%         \item すでに述べたように, ROSはpublish/subscribeインフラを中心に構築されており, デプロイの選択にはほとんど無頓着である
+%         \item したがって, ROSアプリケーションは, 複数のホスト, コア, プロセス, およびスレッドにまたがることができる
+%         \item 自動レイテンシ管理の目的では, Linuxを実行している共有メモリマルチコアシステムが自然な範囲であり, 我々はここに注意を制限する
+%     \end{itemize}
+% \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 実装レベルでは, ROSアプリケーションは, それぞれが1つ以上のスレッドからなる1つ以上のプロセスで構成され, 順番にエグゼキュータ (すなわち, コールバックを呼び出すROSライブラリ機能) を実行する
-        \item 各コールバックは, 特定のエグゼキュータと関連付けられている
-        \item 新しいメッセージがトピックに投稿されると, ROSミドルウェアは, メッセージのコピーがトピックのsubscriberにサービスを提供するエグゼキュータをホストする全てのスレッドに配布されることを保証する
-        \item 標準的な構成では, ROSは $D D S$ ミドルウェアに依存して, エグゼキュータ間でメッセージを仲介しており, 適切なDDS実装が複数存在する[3-5]
-    \end{itemize}
-\end{frame}
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item 実装レベルでは, ROSアプリケーションは, それぞれが1つ以上のスレッドからなる1つ以上のプロセスで構成され, 順番にエグゼキュータ (すなわち, コールバックを呼び出すROSライブラリ機能) を実行する
+%         \item 各コールバックは, 特定のエグゼキュータと関連付けられている
+%         \item 新しいメッセージがトピックに投稿されると, ROSミドルウェアは, メッセージのコピーがトピックのsubscriberにサービスを提供するエグゼキュータをホストする全てのスレッドに配布されることを保証する
+%         \item 標準的な構成では, ROSは $D D S$ ミドルウェアに依存して, エグゼキュータ間でメッセージを仲介しており, 適切なDDS実装が複数存在する[3-5]
+%     \end{itemize}
+% \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item エグゼキュータが新しいメッセージが利用可能であることを通知されると, 対応するコールバックがアクティブになり, 実行のためにキューに入れられる
-        \item したがって, コールバックがメッセージを処理するレイテンシは, 2つの主要な要因によって決定される
-        \item (i) OSがそれぞれのエグゼキュータをホストするスレッドに割り当てるプロセッサ時間, および (ii) エグゼキュータが保留中のコールバックの起動をどのようにシーケンスするかによって発生する待ち行列のレイテンシ時間である
-    \end{itemize}
-\end{frame}
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item エグゼキュータが新しいメッセージが利用可能であることを通知されると, 対応するコールバックがアクティブになり, 実行のためにキューに入れられる
+%         \item したがって, コールバックがメッセージを処理するレイテンシは, 2つの主要な要因によって決定される
+%         \item (i) OSがそれぞれのエグゼキュータをホストするスレッドに割り当てるプロセッサ時間, および (ii) エグゼキュータが保留中のコールバックの起動をどのようにシーケンスするかによって発生する待ち行列のレイテンシ時間である
+%     \end{itemize}
+% \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 我々の目的では, 側面(i)-エグゼキュータスレッドのスケジューリング-は, 自動レイテンシマネージャが実行時に制御できる主要な要因であるため, 主な関心事である
-        \item (ii)のキューイングレイテンシは, コールバックレイテンシに大きな影響を与え, 決して分析が容易ではないが[6], (現在のROSバージョンでは)ランタイム管理には適していない
-    \end{itemize}
-\end{frame}
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item 我々の目的では, 側面(i)-エグゼキュータスレッドのスケジューリング-は, 自動レイテンシマネージャが実行時に制御できる主要な要因であるため, 主な関心事である
+%         \item (ii)のキューイングレイテンシは, コールバックレイテンシに大きな影響を与え, 決して分析が容易ではないが[6], (現在のROSバージョンでは)ランタイム管理には適していない
+%     \end{itemize}
+% \end{frame}
 
 \begin{frame}{応答時間分析}
-    \begin{itemize}
-        \item ROSのデフォルトのエグゼキュータによって管理されるコールバックの応答時間を制限するために, Casiniらによる先行研究[6]に依存している
-        \item Casiniらは, ROSシステムを, アクティベーション関係によって接続されたコールバックの有向非巡回グラフ (DAG) としてモデル化し, 処理チェーンのためのエグゼキュータを考慮した最悪応答時間, すなわちコールバックDAG内の任意のパスのエンドツーエンドレイテンシ境界を提供している
-              \begin{itemize}
-                  \item 実際には, ROSアプリケーションは常に非周期的であるとは限らない
-                  \item ROS-Llama が抽出されたコールバックグラフのサイクルを回避する方法について, セクションV.で議論する
-              \end{itemize}
-        \item Casiniらの処理チェーンは, ROS-Llamaが管理するcause-effectチェーンに直接対応する
-    \end{itemize}
+    ROSのデフォルトのエグゼキュータによって管理されるコールバックの最悪応答時間は, Casiniらによる先行研究~\cite{casini2019response}で計算する
+    \begin{block}{先行研究~\cite{casini2019response}}
+        \begin{itemize}
+            \item ROSシステムを, アクティベーション関係によって接続されたコールバックの有向非巡回グラフ (DAG) としてモデル化
+            \item 処理チェーンのためのエグゼキュータを考慮した最悪応答時間, すなわちコールバックDAG内の任意のパスのエンドツーエンドレイテンシ境界を提供
+        \end{itemize}
+    \end{block}
 \end{frame}
 
-\begin{frame}{予約}
-    \begin{itemize}
-        \item より正確には, Casiniらは, 各スレッドについて供給境界関数 (SBF) [7]が既知であるとの前提で, 最悪応答時間を提供している
-        \item SBFは上記(i)の側面, すなわち, あるスレッドがOSのスケジューラからある区間にどれだけの処理時間を割り当てられることが保証されているかを特徴づけるものである
-        \item これにより, スケジューラビリティ解析は, 各スレッドを, 長さ $\Delta$ の任意の区間で $s b f(\Delta)$ 単位の処理時間を提供する孤立したコア上で動作しているかのように解析できるようになる
-        \item このようなSBF保証を得るための標準的な方法は, LinuxではSCHED\_DEADLINEポリシー[8]によって実現されている予約ベースのスケジューリングを使用することである
-    \end{itemize}
+\begin{frame}{供給境界関数 (SBF)}
+    各スレッドについて供給境界関数 (SBF) が既知であるとする
+    \begin{block}{供給境界関数 (SBF)}
+        あるスレッドがある区間にOSのスケジューラからどれだけの処理時間を割り当てられることが保証されているかを特徴づける
+    \end{block}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item SCHED\_DEADLINEスケジューラは, H-CBS (Hard Constant Bandwidth Server) [9] 予約スキームをGRUB [10] 帯域幅再利用と組み合わせて実装している
-        \item 具体的なスケジューリング規則は今のところ関係ないが, 各予約 $r$ はバジェット $\operatorname{budget}(r)$ と期間 $\operatorname{period}(r)$ で特徴付けられ, スケジューラは各予約が期間 $(r)$ の各期間で少なくともバジェット $(r)$ ユニットのプロセッササービスを受けることを保証している
-        \item この保証は, 帯域幅 $b w(r)=\frac{\operatorname{budget}(r)}{\text { period }(r)}$ としてより簡便に指定されることもある
-    \end{itemize}
+\begin{frame}{SBF保証を得る方法}
+    SBF保証を得るための標準的な方法は, LinuxではSCHED\_DEADLINEポリシーによって実現されている予約ベーススケジューリングを使用すること
+    \begin{block}{予約ベーススケジューリング}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item 各予約 $r$ はバジェット $\operatorname{budget}(r)$ と期間 $\operatorname{period}(r)$ で特徴付けられる
+            \item スケジューラは各予約の各周期で少なくとも $\operatorname{budget}(r)$ ユニットのプロセッササービスを受けることを保証する
+            \item この保証は帯域幅 $b w(r)=\frac{\operatorname{budget}(r)}{\text { period }(r)}$ で表記される
+        \end{itemize}
+    \end{block}
 \end{frame}
 
 \begin{frame}{到着曲線}
-    \begin{itemize}
-        \item 最後に, Casiniらの分析[6]のもう1つの重要な仮定は, 外部イベントソースによってトリガーされたコールバックについて, 到達曲線が既知であること
-        \item イベントソースは, それ自体がコールバックではなく, 1つ以上のトピック (例えば, センサ値を取得してコールバックDAGに送り込むデバイスドライバ) にメッセージを送信するものである
-        \item 到着曲線 $\eta_{c}(\Delta)$ は, 長さ $\Delta$ の任意の与えられた間隔にわたってコールバック $c$ のアクティベーションの最大数を制限する
-    \end{itemize}
+    外部イベントソースによってトリガーされたコールバックについて, 到達曲線が既知であると仮定する
+    \begin{block}{外部イベントソース}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item それ自体がコールバックではなく, 1つ以上のトピックにメッセージを送信するもの
+            \item 例えば, センサ値を取得してコールバックDAGに送り込むデバイスドライバ
+        \end{itemize}
+    \end{block}
+    \begin{block}{到着曲線 $\eta_{c}(\Delta)$}
+        到着曲線 $\eta_{c}(\Delta)$ は, 長さ $\Delta$ の任意の間隔でコールバック $c$ のアクティベーションの最大数を示す
+    \end{block}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 到着曲線と呼び出しごとの最悪実行時間 (WCET)  $e_{c}$ が与えられると, コールバックの要求境界関数 (RBF) を $r b f_{c}(\Delta)=e_{c} \cdot \eta_{c}(\Delta)$ として決定することは簡単であり, これは, 長さ $\Delta$ の間隔におけるコールバック $c$ の全ての起動の最大累積プロセッサ要求を制限するものである
-        \item エグゼキュータのSBFとその全てのコールバックのRBFの相互作用は, Casiniらの分析[6]の核心であり, その分析を適用するには, かなりのリアルタイム専門知識とシステム内部の包括的知識が必要であることを強調している
-    \end{itemize}
+\begin{frame}{要求境界関数}
+    \begin{block}{要求境界関数 (RBF)}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item 要求境界関数は, 任意の間隔におけるコールバック$c$ の全てのアクティベーションの累積プロセッサ要求の最大値を示す
+            \item $r b f_{c}(\Delta)=e_{c} \cdot \eta_{c}(\Delta)$
+                  \begin{itemize}
+                      \item \desc{$e_{c}$}{コールバック $c$ の最悪実行時間}
+                  \end{itemize}
+        \end{itemize}
+    \end{block}
 \end{frame}
