--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/abstract.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/abstract.tex
@@ -10,7 +10,7 @@
 
 \begin{frame}{提案の概要}
     \begin{itemize}
-        \item ROS 2用自動レイテンシマネージャであるROS-Llamaを提案する
+        \item ROS 2用自動レイテンシマネージャである ROS Live latency manager (ROS-Llama) を提案する
         \item ROS-Llamaはわずかな努力とリアルタイムコンセプトの知識だけで使用できる
         \item ROS 2の関連する特性とロボット工学領域の必須要件が特定され, このような自動ツールを開発する際の概念的および実際的な課題を議論する
         % \item モバイルロボット上の実験は, アプローチの実行可能性を実証し, ROS-LlamaがデフォルトのLinuxスケジューラと比較して, 負荷の下で観測された最大レイテンシを短縮することを示す
