--- a/paper/2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/main.tex
+++ b/paper/2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/main.tex
@@ -12,8 +12,8 @@
 
 
 %%%%% Front Cover %%%%%
-\title{Automatic Latency Management for ROS2: Benefits, Challenges, and Open Problems}
-\subtitle{IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS), 2021}
+\title{Probabilistically Guaranteeing End-to-end Latencies in Autonomous Vehicle Computing Systems}
+\subtitle{IEEE Transactions on Computing (TC), 2022}
 \author{矢野 篤志}
 \date{\today}
 \institute[EMBIV]{EMBIV}
@@ -35,22 +35,19 @@
 
 % \input{prior_knowledge.tex}
 % \input{introduction.tex}
-% \input{background_and_definitions.tex}
-% \input{automatic_latency_management.tex}
-% \input{design_of_ros_llama.tex}
-% \input{practical_considerations.tex}
-% \input{evaluation.tex}
-% \forme{\input{open_problems_and_pragmatic_workarounds.tex}}
-% \input{related_work.tex}
+\input{preliminaries.tex}
+\input{proposed_analysis.tex}
+\input{experimental_results.tex}
+\input{related_work.tex}
 \input{conclusion.tex}
 
 \lastpage
 
-\section*{Reference}
-\begin{frame}[allowframebreaks]{Reference}
-    \beamertemplatetextbibitems
-    \bibliographystyle{unsrt}
-    \bibliography{\beamerDir/bibtex/master_reference}
-\end{frame}
+% \section*{Reference}
+% \begin{frame}[allowframebreaks]{Reference}
+%     \beamertemplatetextbibitems
+%     \bibliographystyle{unsrt}
+%     \bibliography{\beamerDir/bibtex/master_reference}
+% \end{frame}
 
 \end{document}
